# itm_2025_soa_u2

./: .coverage  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pruebas.yaml  ruff.yml
docs/: ayuda.md  configuracion.md  index.md
docs/servicios/: asantelis.md  dduenas.md  dramos.md  ffernandez.md  imayo.md  imoreno.md  index.md  jchaidez.md  jheredia.md  jparedes.md  ksoto.md  nnieto.md  rgarcia.md  rpalma.md
herramientas/webservice/: index.html
servicios/: index.html
servicios/asantelis/: index.html
servicios/dduenas/: index.html
servicios/dramos/: index.html
servicios/imayo/: index.html
servicios/imoreno/: index.html
servicios/jchaidez/: index.html
servicios/jheredia/: index.html
servicios/jparedes/: index.html
servicios/ksoto/: index.html
servicios/nnieto/: index.html
servicios/rgarcia/: index.html
servicios/rpalma/: index.html
tests/: conftest.py  test_asantelis.py  test_dramos.py  test_fcalzada.py  test_ffernandez.py  test_imayo.py  test_imoreno.py  test_jheredia.py  test_jparedes.py  test_rpalma.py
tests/dduenas/: test_dduenas.py
tests/jchaidez/: test_jchaidez.py
tests/jcontreras/: test_jcontreras.py
tests/ksoto/: .coverage  test_ksoto.py
tests/nnieto/: test_cli.py  test_frontend.py  test_ws_etapa_01.py  test_ws_etapa_02.py
tests/rgarcia/: test_rgarcia.py
tutorial/: index.html
tutorial/git/: index.html
tutorial/implementacion/: index.html
tutorial/pytest/: index.html
tutorial/repositorio/: index.html
tutorial/ruff/: index.html
tutorial/uv/: index.html
tutorial/winget/: index.html
webservice/: app.py  frontend.py
webservice/asantelis/: __init__.py  servicio.py
webservice/dduenas/: __init__.py  servicio.py
webservice/dramos/: __init__.py  servicio.py
webservice/fcalzada/: __init__.py  servicio.py
webservice/ffernadez/: __init__.py  servicio.py
webservice/imayo/: __init__.py  servicioEventos.py
webservice/imoreno/: HotelService.py  __init__.py  nuevoArchivo.py
webservice/jchaidez/: __init__.py  service.py
webservice/jcontreras/: __init__.py  servicio.py
webservice/jheredia/: __init__.py  servicio.py
webservice/jparedes/: __init__.py  servicio.py
webservice/ksoto/: __init__.py  servicio.py
webservice/nnieto/: __init__.py  etapa_01.py  etapa_02.py
webservice/rgarcia/: __init__.py  (+2 more)
(+2 files in other folders)
